Fix styling and overflow

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -3083,7 +3083,6 @@ td.blob-excerpt {
   max-height: calc(100vh - 50px);
   height: calc(100vh - 50px);
   overflow-y: auto;
-  overflow-x: auto;
 
   .list {
     padding-top: inherit;
